<resources>
    <string name="app_name">Invoiceman</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="got_it">GOT IT</string>
    <string name="main_logout">Logout</string>
    <string name="success_exclamation">Success!</string>
    <string name="invoice_accept_before_editing">Please, accept the invoice first</string>
    <string name="product_article">Article:</string>
    <string name="invoice_no">No:</string>
    <string name="invoice_seller">Seller:</string>
    <string name="invoice_comment">Comment:</string>
    <string name="invoice_quantity">Quantity:</string>
    <string name="invoice_date">Date:</string>
    <string name="invoice_accepting">Requesting permission …</string>
    <string name="invoice_returning">Returning the invoice …</string>
    <string name="invoice_submitting">Submitting the invoice …</string>
    <string name="invoices_search_hint">Enter number, date or seller</string>
    <string name="invoice_search_hint">Enter article or description</string>
    <string name="invoices_sort_by_number">By number</string>
    <string name="invoices_sort_by_date">By date</string>
    <string name="invoices_sort_by_seller">By seller</string>
    <string name="invoices_tab_available">AVAILABLE</string>
    <string name="invoices_tab_in_progress">IN PROGRESS</string>
    <string name="invoices_loading_text">Fetching invoices …</string>
    <string name="invoices_no_new_to_process">no new invoices to process</string>
    <string name="invoices_no_new_received">Nothing new</string>
    <string name="network_error_inconsistent_data">Wrong data format</string>
    <string name="network_error_no_permissions">Insufficient permissions for that action</string>
    <string name="network_error_not_found">This invoice does not exist on the server</string>
    <string name="network_error_taken">This invoice is already being processed by another employee</string>
    <string name="network_error_server">Server error, please try again later</string>
    <string name="network_error_server_not_available">Server unavailable, please try again later</string>
    <string name="network_error_server_wrong_response">Incorrect response from the server</string>
    <string name="network_error_general">Unknown network error (%d), please contact the developers</string>
    <string name="product_scan_article">scan\narticle</string>
    <string name="product_scan_article_hint">The article must be scanned on each packaging</string>
    <string name="product_has_serial">has\nserial</string>
    <string name="product_has_serial_hint">The product has a serial number which must be scanned or entered</string>
    <string name="product_scan_serial">scan\nserial</string>
    <string name="product_scan_serial_hint">The serial number must be scanned, not entered</string>
    <string name="product_same_serial">same\nserial</string>
    <string name="product_same_serial_hint">All the items of this product have the same serial number</string>
    <string name="product_serial_pattern">fixed\nformat</string>
    <string name="product_serial_pattern_hint">Serial numbers must conform to a certain format</string>
    <string name="invoice_accept">accept</string>
    <string name="invoice_return">return</string>
    <string name="invoice_submit">submit</string>
    <string name="result_add_failed">Could not add the result</string>
    <string name="result_add_failed_comment">Could not scan the barcode</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">sign in</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">Email</string>
    <string name="quantity_of">of</string>
    <string name="scan_prompt">Scan the barcode on the item/packaging</string>
    <string name="product_add_result_scan">Scan</string>
    <string name="product_add_result_generate">Generate</string>
</resources>
