<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/invoices_search"
            android:icon="@drawable/ic_search"
            app:showAsAction="always"
            android:title="@string/search" />
    <item
            android:id="@+id/invoices_sort"
            android:icon="@drawable/ic_sort"
            app:showAsAction="always"
            android:title="@string/sort" >
        <menu>
            <item android:id="@+id/invoices_sort_by_number"
                  android:title="@string/invoices_sort_by_number" />
            <item android:id="@+id/invoices_sort_by_date"
                  android:title="@string/invoices_sort_by_date" />
            <item android:id="@+id/invoices_sort_by_seller"
                  android:title="@string/invoices_sort_by_seller" />
        </menu>
    </item>
</menu>