<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@drawable/seamless_background"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".login.LoginFragment">

    <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelPassword"
            tools:text="Password" android:textStyle="bold"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"/>
    <EditText
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            android:background="@color/semiTransparentBackground" tools:text="password"
            android:text="password" android:textAlignment="center" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/enter_your_password"
            app:layout_constraintHorizontal_bias="0.503" android:inputType="textPassword"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/email"/>
    <Button
            android:text="@string/sign_in"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/buttonSignIn" app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@+id/password"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/password" tools:text="sign in"
            android:textSize="14sp" android:padding="0dp" android:paddingBottom="0dp" android:paddingTop="0dp"
            android:elevation="0dp"/>
    <ImageView
            android:layout_width="221dp"
            android:layout_height="226dp"
            android:id="@+id/imageView"
            app:srcCompat="@mipmap/ic_launcher2_foreground" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            android:background="@color/semiTransparentBackground" tools:text="demo@invoiceman.com"
            android:text="demo@invoiceman.com" android:textAlignment="center" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/enter_your_email" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelEmail" app:layout_constraintStart_toStartOf="@+id/email"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/email" tools:text="Email" android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>