<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/seamless_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".settings.SettingsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/invoice_info_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="3dp"
            android:background="@color/cardViewBackColor"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:paddingBottom="4dp" android:paddingTop="4dp">

        <TextView
                android:id="@+id/invoice_label_seller"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Seller:"
                android:textSize="18sp"
                android:fontFamily="sans-serif" android:text="@string/invoice_seller" android:layout_marginStart="8dp"/>

        <TextView
                android:id="@+id/invoice_seller"
                android:layout_width="0dp" android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/invoice_label_seller"
                tools:text="Siemens LLC"
                android:textSize="18sp" android:textColor="@android:color/black"
                android:fontFamily="sans-serif" android:textAllCaps="false" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="4dp"/>
        <TextView
                android:id="@+id/invoice_label_number"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/invoice_seller" android:layout_marginTop="4dp"
                tools:text="No:"
                android:textSize="14sp"
                android:fontFamily="sans-serif" android:text="@string/invoice_no" android:layout_marginStart="8dp"/>

        <TextView
                android:id="@+id/invoice_number"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/invoice_label_number" android:layout_marginStart="4dp"
                app:layout_constraintTop_toBottomOf="@id/invoice_seller" android:layout_marginTop="4dp"
                tools:text="123"
                android:textSize="14sp"
                android:fontFamily="sans-serif" android:textStyle="bold" android:textColor="@android:color/black"/>

        <TextView
                android:id="@+id/invoice_label_date"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/invoice_number" android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/invoice_seller" android:layout_marginTop="4dp"
                tools:text="Date:"
                android:textSize="14sp"
                android:fontFamily="sans-serif" android:text="@string/invoice_date"/>

        <TextView
                android:id="@+id/invoice_date"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/invoice_label_date" android:layout_marginStart="4dp"
                app:layout_constraintTop_toBottomOf="@id/invoice_seller" android:layout_marginTop="4dp"
                tools:text="12.03.2019"
                android:textSize="14sp"
                android:fontFamily="sans-serif" android:textStyle="bold" android:textColor="@android:color/black"/>

        <TextView
                android:id="@+id/invoice_label_comment"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/invoice_label_number" android:layout_marginTop="4dp"
                tools:text="Comment:"
                android:textSize="14sp"
                android:fontFamily="sans-serif" android:text="@string/invoice_comment"
                android:layout_marginStart="8dp"/>
        <TextView
                android:id="@+id/invoice_comment"
                android:layout_width="0dp" android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/invoice_label_comment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/invoice_label_number"
                tools:text="Must be finished by the end of the week!"
                android:textSize="14sp"
                android:fontFamily="sans-serif" android:textAllCaps="false" android:layout_marginTop="4dp"
                android:textColor="@android:color/black" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

        <TextView
                android:id="@+id/invoice_label_progress"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/invoice_label_comment" android:layout_marginTop="4dp"
                tools:text="Progress:"
                android:textSize="14sp"
                android:fontFamily="sans-serif" android:text="@string/invoice_progress"
                android:layout_marginStart="8dp"/>
        <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/invoice_progress" app:layout_constraintStart_toEndOf="@+id/invoice_label_progress"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/invoice_comment" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:progressTint="@color/primaryDarkColor"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>