<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/semiTransparentBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/invoice_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:padding="8dp">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/product_article" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="6ES7-AB0-XB56"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toStartOf="@+id/product_divider"
                android:layout_marginEnd="8dp"
                android:ellipsize="end" android:maxLines="1" android:textSize="14sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/product_qty"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@android:color/black"
                android:minEms="1"
                android:layout_marginTop="8dp" tools:text="123" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:textSize="16sp" android:textAlignment="center"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/product_description"
                app:layout_constraintTop_toBottomOf="@+id/product_article"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="The product description goes here"
                android:layout_marginEnd="8dp"
                android:maxLines="3"
                android:ellipsize="end"
                app:layout_constraintEnd_toStartOf="@+id/product_divider"
                android:layout_marginTop="2dp"
                android:textSize="12sp"/>
        <View
                android:id="@+id/product_divider"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toStartOf="@+id/product_qty"
                android:layout_marginEnd="8dp" android:layout_marginTop="4dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/product_description"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="6dp"
                app:contentPaddingLeft="4dp"
                app:contentPaddingRight="4dp"
                android:id="@+id/product_article_scan_required"
                app:cardBackgroundColor="@color/primaryDarkColor">
            <androidx.appcompat.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                          android:orientation="horizontal"
                                                          android:layout_height="match_parent"
                                                          android:gravity="center_vertical"
                                                          android:layout_marginBottom="2dp">
                <ImageView android:layout_width="wrap_content"
                           app:srcCompat="@drawable/ic_barcode"
                           android:layout_height="wrap_content" tools:ignore="ContentDescription"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/product_scan_article" android:textSize="10sp" android:textAlignment="center"
                          android:textColor="@android:color/white" android:gravity="clip_vertical|center_horizontal"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                app:layout_constraintTop_toBottomOf="@id/product_description"
                app:layout_constraintStart_toEndOf="@id/product_article_scan_required"
                android:layout_height="wrap_content"
                app:cardCornerRadius="6dp"
                app:contentPaddingLeft="2dp"
                app:contentPaddingRight="4dp"
                android:id="@+id/product_has_serial"
                app:cardBackgroundColor="@color/primaryDarkColor">
            <androidx.appcompat.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                          android:orientation="horizontal"
                                                          android:layout_height="match_parent"
                                                          android:gravity="center_vertical"
                                                          android:layout_marginBottom="2dp">
                <ImageView android:layout_width="wrap_content"
                           app:srcCompat="@drawable/ic_serial"
                           android:layout_height="wrap_content" tools:ignore="ContentDescription"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/product_has_serial" android:textSize="10sp"
                          android:textAlignment="center"
                          android:textColor="@android:color/white" android:gravity="clip_vertical|center_horizontal"
                          android:layout_marginLeft="3dp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                app:layout_constraintTop_toBottomOf="@id/product_description"
                app:layout_constraintStart_toEndOf="@id/product_has_serial"
                android:layout_height="wrap_content"
                app:cardCornerRadius="6dp"
                app:contentPaddingLeft="4dp"
                app:contentPaddingRight="4dp"
                android:id="@+id/product_serial_scan_required"
                app:cardBackgroundColor="@color/primaryDarkColor">
            <androidx.appcompat.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                          android:orientation="horizontal"
                                                          android:layout_height="match_parent"
                                                          android:gravity="center_vertical"
                                                          android:layout_marginBottom="2dp">
                <ImageView android:layout_width="wrap_content"
                           app:srcCompat="@drawable/ic_barcode"
                           android:layout_height="wrap_content" tools:ignore="ContentDescription"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/product_scan_serial" android:textSize="10sp" android:textAlignment="center"
                          android:textColor="@android:color/white" android:gravity="clip_vertical|center_horizontal"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                app:layout_constraintTop_toBottomOf="@id/product_description"
                app:layout_constraintStart_toEndOf="@id/product_serial_scan_required"
                android:layout_height="wrap_content"
                app:cardCornerRadius="6dp"
                app:contentPaddingLeft="2dp"
                app:contentPaddingRight="4dp"
                android:id="@+id/product_serial_same"
                app:cardBackgroundColor="@color/primaryDarkColor">
            <androidx.appcompat.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                          android:orientation="horizontal"
                                                          android:layout_height="match_parent"
                                                          android:gravity="center_vertical"
                                                          android:layout_marginBottom="2dp">
                <ImageView android:layout_width="wrap_content"
                           app:srcCompat="@drawable/ic_content_copy"
                           android:layout_height="wrap_content" tools:ignore="ContentDescription"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/product_same_serial" android:textSize="10sp"
                          android:textAlignment="center"
                          android:textColor="@android:color/white" android:gravity="clip_vertical|center_horizontal"
                          android:layout_marginLeft="3dp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                app:layout_constraintTop_toBottomOf="@id/product_description"
                app:layout_constraintStart_toEndOf="@id/product_serial_same"
                android:layout_height="wrap_content"
                app:cardCornerRadius="6dp"
                app:contentPaddingLeft="2dp"
                app:contentPaddingRight="4dp"
                android:id="@+id/product_serial_pattern_used"
                app:cardBackgroundColor="@color/primaryDarkColor">
            <androidx.appcompat.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                          android:orientation="horizontal"
                                                          android:layout_height="match_parent"
                                                          android:gravity="center_vertical"
                                                          android:layout_marginBottom="2dp">
                <ImageView android:layout_width="wrap_content"
                           app:srcCompat="@drawable/ic_format_shapes"
                           android:layout_height="wrap_content" tools:ignore="ContentDescription"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/product_serial_pattern" android:textSize="10sp"
                          android:textAlignment="center"
                          android:textColor="@android:color/white" android:gravity="clip_vertical|center_horizontal"
                          android:layout_marginLeft="3dp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>